// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TodoList /> Should render and match the snapshot on empty todos 1`] = `
<div
  class="Wrapper-sc-12k4hfk-0 dilioB"
/>
`;

exports[`<TodoList /> Should render and match the snapshot with 3 todos 1`] = `
<div
  class="Wrapper-sc-12k4hfk-0 dilioB"
>
  <div
    class="Wrapper-ziinx6-0 ecjWnr"
    id="todo-1"
  >
    <div
      class="TodoTitle-xxpseh-0 cHcgZX"
      data-testid="todo-1"
      role="button"
      type="button"
    >
      A todo
    </div>
    <div
      class="TodoOptions-sc-1s3b1hj-0 jWmTOe"
    >
      <div
        alt="check"
        class="Checkbox-eu7a0t-0 hjQtxn"
        data-testid="toggle-1"
        role="button"
        type="button"
      />
      <div
        alt="delete"
        class="DeleteButton-sc-2zb8s8-0 ceLVod"
        data-testid="delete-1"
        role="button"
        type="button"
      />
    </div>
  </div>
  <div
    class="Wrapper-ziinx6-0 ecjWnr"
    id="todo-2"
  >
    <div
      class="TodoTitle-xxpseh-0 cHcgZX"
      data-testid="todo-2"
      role="button"
      type="button"
    >
      Another todo
    </div>
    <div
      class="TodoOptions-sc-1s3b1hj-0 jWmTOe"
    >
      <div
        alt="uncheck"
        class="Checkbox-eu7a0t-0 hjQtxn"
        data-testid="toggle-2"
        role="button"
        type="button"
      />
      <div
        alt="delete"
        class="DeleteButton-sc-2zb8s8-0 ceLVod"
        data-testid="delete-2"
        role="button"
        type="button"
      />
    </div>
  </div>
  <div
    class="Wrapper-ziinx6-0 ecjWnr"
    id="todo-3"
  >
    <div
      class="TodoTitle-xxpseh-0 cHcgZX"
      data-testid="todo-3"
      role="button"
      type="button"
    >
      Last todo
    </div>
    <div
      class="TodoOptions-sc-1s3b1hj-0 jWmTOe"
    >
      <div
        alt="check"
        class="Checkbox-eu7a0t-0 hjQtxn"
        data-testid="toggle-3"
        role="button"
        type="button"
      />
      <div
        alt="delete"
        class="DeleteButton-sc-2zb8s8-0 ceLVod"
        data-testid="delete-3"
        role="button"
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`<TodoList /> Should render and match the snapshot with 3 todos after clicking one of them 1`] = `
<div
  class="Wrapper-sc-12k4hfk-0 dilioB"
>
  <div
    class="Wrapper-ziinx6-0 ecjWnr"
    id="todo-1"
  >
    <div
      class="TodoTitle-xxpseh-0 cHcgZX"
      data-testid="todo-1"
      role="button"
      type="button"
    >
      A todo
    </div>
    <div
      class="TodoOptions-sc-1s3b1hj-0 jWmTOe"
    >
      <div
        alt="check"
        class="Checkbox-eu7a0t-0 hjQtxn"
        data-testid="toggle-1"
        role="button"
        type="button"
      />
      <div
        alt="delete"
        class="DeleteButton-sc-2zb8s8-0 ceLVod"
        data-testid="delete-1"
        role="button"
        type="button"
      />
    </div>
  </div>
  <div
    class="Wrapper-ziinx6-0 ecjWnr"
    id="todo-2"
  >
    <div
      class="TodoTitle-xxpseh-0 cHcgZX"
      data-testid="todo-2"
      role="button"
      type="button"
    >
      Another todo
    </div>
    <div
      class="TodoOptions-sc-1s3b1hj-0 jWmTOe"
    >
      <div
        alt="uncheck"
        class="Checkbox-eu7a0t-0 hjQtxn"
        data-testid="toggle-2"
        role="button"
        type="button"
      />
      <div
        alt="delete"
        class="DeleteButton-sc-2zb8s8-0 ceLVod"
        data-testid="delete-2"
        role="button"
        type="button"
      />
    </div>
  </div>
  <div
    class="Wrapper-ziinx6-0 ecjWnr"
    id="todo-3"
  >
    <input
      class="Input-tpeqbo-0 VuylU"
      data-testid="editInput-3"
      type="text"
      value="Last todo"
    />
    <div
      class="TodoOptions-sc-1s3b1hj-0 jWmTOe"
    >
      <div
        alt="check"
        class="Checkbox-eu7a0t-0 hjQtxn"
        data-testid="toggle-3"
        role="button"
        type="button"
      />
      <div
        alt="delete"
        class="DeleteButton-sc-2zb8s8-0 ceLVod"
        data-testid="delete-3"
        role="button"
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`<TodoList /> Should render and match the snapshot with one todo 1`] = `
<div
  class="Wrapper-sc-12k4hfk-0 dilioB"
>
  <div
    class="Wrapper-ziinx6-0 ecjWnr"
    id="todo-1"
  >
    <div
      class="TodoTitle-xxpseh-0 cHcgZX"
      data-testid="todo-1"
      role="button"
      type="button"
    >
      A todo
    </div>
    <div
      class="TodoOptions-sc-1s3b1hj-0 jWmTOe"
    >
      <div
        alt="check"
        class="Checkbox-eu7a0t-0 hjQtxn"
        data-testid="toggle-1"
        role="button"
        type="button"
      />
      <div
        alt="delete"
        class="DeleteButton-sc-2zb8s8-0 ceLVod"
        data-testid="delete-1"
        role="button"
        type="button"
      />
    </div>
  </div>
</div>
`;
